--- a/README
+++ b/README
@@ -10,13 +10,16 @@
 ##
 
 NOTES: 
+Installation of mythepisode is very easy to do and only takes a few minutes.
+
 After an initial install when you first select TV Episodes mythepisode has to
-go to TVRage.com and grab a list of shows for the first time so there might
-be a slight delay.  The same is true when you click on a show for the first
-time.  All episode information for that show has to be retrieved.  It will be
-much faster the next time you select it.  If summary information doesn't 
+go to TVRage.com/TheTVDB.com and grab a list of shows for the first time so 
+there might be a slight delay.  The same is true when you click on a show for 
+the first time.  All episode information for that show has to be retrieved.  It 
+will be much faster the next time you select it.  If summary information doesn't 
 exist at TVRage.com for a pariticular episode an attempt will be made to get it
-from TheTVDB.com 
+from TheTVDB.com.  The user has the option of selecting TVRage.com or TheTVDB.com
+as the primary source for episode information. 
 
 I have tested mythepisode with the following browsers(although not thoroughly)
 Firefox - very fast on my system
@@ -136,6 +139,12 @@ current  - Display shows that are currently running tv shows
 all      - Display every(I'm sure some are missing) TV series that has ever aired
 
 
+Default Query Site:
+-------------------
+This option is used to choose the query site used for grabbing episode information.
+The default setting is TVRage.com
+
+
 Display tvwish options:
 -----------------------
 This option is used to turn on/off the display of tvwish options and menus.  Some
@@ -148,10 +157,10 @@ Episode matching accuracy (%):
 This option is used to help improve episode matching.  Because of spelling differences
 from different sources there are times when episodes fail to be marked as previously
 recorded or scheduled for recording.  To overcome this we compare the episode name 
-from TVRage.com against the episode name from mythtv and label as a match if the character
-match between the two is equal to or greater than the episode matching percentage.  The
-default setting is 85% which means the two must match 85% or higher to get labeled as
-a match. 
+from TVRage.com/TheTVDB.com against the episode name from mythtv and label as a match 
+if the character match between the two is equal to or greater than the episode matching 
+percentage.  The default setting is 85% which means the two must match 85% or higher 
+to get labeled as a match. 
 
 example:  A King of Queens episode called "Alter Ego"
 
@@ -169,10 +178,10 @@ balance.
 Update episode info if older than (days):
 -----------------------------------------
 This option is used to set how often episode information is automatically grabbed from
-TVRage.com.  The default setting is 7 days.  When you click on a TV show, mythepisode
-will verify that you have downloaded episode information and that it is not older
-than 7 days.  If it is older than 7 days mythepisode will go to TVRage.com and get
-updated information.
+TVRage.com/TheTVDB.com.  The default setting is 7 days.  When you click on a TV show, 
+mythepisode will verify that you have downloaded episode information and that it is not 
+older than 7 days.  If it is older than 7 days mythepisode will go to TVRage.com/TheTVDB.com
+and get updated information.
 
 
 Size of episode thumbnail (pixels):
