--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -8,6 +8,8 @@
     * Fix to previous recording deletion
     * Add episode check against mythvideo
     * Improve "Scheduled to Record but no match" matching
+    * Update to grab information from TheTVDB.com
+    * Allow user to select data from TheTVDB.com or TVRage.co
 
 1.0.7
     * Many bug fixes
