--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -8,6 +8,7 @@
     * Fix to previous recording deletion
     * Add episode check against mythvideo
     * Improve "Scheduled to Record but no match" matching
+    * Add "Pending Request" popup on bottom left
     * Update to grab information from TheTVDB.com
     * Allow user to select data from TheTVDB.com or TVRage.co
 
