--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -11,6 +11,7 @@
     * Add "Pending Request" popup on bottom left
     * Update to grab information from TheTVDB.com
     * Allow user to select data from TheTVDB.com or TVRage.com
+    * Add navigation menu to episodes, previous recordings, and tvwish
 
 1.0.7
     * Many bug fixes
