--- a/wiki/Contributors.wiki
+++ b/wiki/Contributors.wiki
@@ -12,7 +12,8 @@ Alec C.:
   * Update to welcome page
   * Fix default mainpage link
   * Fix for shows that are set to never record
-  * Added episode check against mythvideo* Add navigation menu to episodes, previous recordings, and tvwish
+  * Added episode check against mythvideo
+  * Add navigation menu to episodes, previous recordings, and tvwish
   
 Chris K.:
   * DB query update
