Edited wiki page Installation_Instructions through web user interface.

--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -3,15 +3,18 @@
 
 = Details =
 
-
-
 {{{
 NOTES:
+Installation of mythepisode is very easy to do and only takes a few minutes.
+
 After an initial install when you first select TV Episodes mythepisode has to
-go to tvrage.com and grab a list of shows for the first time so there might
-be a slight delay.  The same is true when you click on a show for the first
-time.  All episode information for that show has to be retrieved.  It will be
-much faster the next time you select it.
+go to TVRage.com/TheTVDB.com and grab a list of shows for the first time so
+there might be a slight delay.  The same is true when you click on a show for
+the first time.  All episode information for that show has to be retrieved.  It
+will be much faster the next time you select it.  If summary information doesn't
+exist at TVRage.com for a pariticular episode an attempt will be made to get it
+from TheTVDB.com.  The user has the option of selecting TVRage.com or TheTVDB.com
+as the primary source for episode information.
 
 I have tested mythepisode with the following browsers(although not thoroughly)
 Firefox - very fast on my system
@@ -21,7 +24,7 @@ IE      - very slow on my system
 
 - All Configuration settings are set through the mythweb settings menu.  Listed
   under the installation instructions is all of the configuration options and
-  their purpose.
+  ther purpose.
 
 - If you are running mythweb .24 or greater you will need to make a couple of
   changes to episode.php since .24/trunk has changed some of the mythweb
@@ -107,7 +110,7 @@ Settings Tab:
 Countries (space seperated):
 ----------------------------
 This option is used to set the country or countries shows that will be retrieved
-from tvrage and displayed in mythepisode.  The default is set to "US".  Each
+from TVRage.com and displayed in mythepisode.  The default is set to "US".  Each
 country should only be 2 characters and seperated by a space if more than one
 country is selected.
 
@@ -131,6 +134,12 @@ current  - Display shows that are currently running tv shows
 all      - Display every(I'm sure some are missing) TV series that has ever aired
 
 
+Default data site:
+-------------------
+This option is used to choose the query site used for grabbing episode information.
+The default setting is TVRage.com
+
+
 Display tvwish options:
 -----------------------
 This option is used to turn on/off the display of tvwish options and menus.  Some
@@ -143,14 +152,14 @@ Episode matching accuracy (%):
 This option is used to help improve episode matching.  Because of spelling differences
 from different sources there are times when episodes fail to be marked as previously
 recorded or scheduled for recording.  To overcome this we compare the episode name
-from tvrage against the episode name from mythtv and label as a match if the character
-match between the two is equal to or greater than the episode matching percentage.  The
-default setting is 85% which means the two must match 85% or higher to get labeled as
-a match.
+from TVRage.com/TheTVDB.com against the episode name from mythtv and label as a match
+if the character match between the two is equal to or greater than the episode matching
+percentage.  The default setting is 85% which means the two must match 85% or higher
+to get labeled as a match.
 
 example:  A King of Queens episode called "Alter Ego"
 
-mythtv listing:         tvrage listing:
+mythtv listing:         TVRage.com listing:
 ---------------         ---------------
 Altar Ego               Alter Ego
 
@@ -164,16 +173,16 @@ balance.
 Update episode info if older than (days):
 -----------------------------------------
 This option is used to set how often episode information is automatically grabbed from
-tvrage.com.  The default setting is 7 days.  When you click on a TV show, mythepisode
-will verify that you have downloaded episode information and that it is not older
-than 7 days.  If it is older than 7 days mythepisode will go to tvrage.com and get
-updated information.
+TVRage.com/TheTVDB.com.  The default setting is 7 days.  When you click on a TV show,
+mythepisode will verify that you have downloaded episode information and that it is not
+older than 7 days.  If it is older than 7 days mythepisode will go to TVRage.com/TheTVDB.com
+and get updated information.
 
 
 Size of episode thumbnail (pixels):
 -----------------------------------
 This option is used to set the size of the thumbnail displayed on the episode listing
-page.  The default settings is "170" pixels.
+page.  The default settings is "250" pixels.
 
 
 #############
@@ -181,7 +190,7 @@ Override Tab:
 #############
 This tab is used to configure shows to display properly in mythepisode that have names
 that don't match.  When mythtv records a show it has a specific title that may not
-match exactly with what is listed in tvrage.  As a result mythepisode doesn't know
+match exactly with what is listed in TVRage.com.  As a result mythepisode doesn't know
 how to display that show on the recorded page.
 
 Examples:
