--- a/trunk/README
+++ b/trunk/README
@@ -9,17 +9,18 @@
  #
 ##
 
-NOTES: 
-Installation of mythepisode is very easy to do and only takes a few minutes.
+NOTES:
+Installation of mythepisode only takes a few minutes and can be accomplished
+with the 5 easy steps listed below in the installation section.
 
 After an initial install when you first select TV Episodes mythepisode has to
-go to TVRage.com/TheTVDB.com and grab a list of shows for the first time so 
-there might be a slight delay.  The same is true when you click on a show for 
-the first time.  All episode information for that show has to be retrieved.  It 
-will be much faster the next time you select it.  If summary information doesn't 
+go to TVRage.com/TheTVDB.com and grab a list of shows for the first time so
+there might be a slight delay.  The same is true when you click on a show for
+the first time.  All episode information for that show has to be retrieved.  It
+will be much faster the next time you select it.  If summary information doesn't
 exist at TVRage.com for a pariticular episode an attempt will be made to get it
 from TheTVDB.com.  The user has the option of selecting TVRage.com or TheTVDB.com
-as the primary source for episode information. 
+as the primary source for episode information.
 
 I have tested mythepisode with the following browsers(although not thoroughly)
 Firefox - very fast on my system
@@ -27,13 +28,13 @@ Safari  - very fast on my system
 Chrome  - very fast on my system
 IE      - very slow on my system
 
-- All Configuration settings are set through the mythweb settings menu.  Listed 
+- All Configuration settings are set through the mythweb settings menu.  Listed
   under the installation instructions is all of the configuration options and
   ther purpose.
 
-- If you are running mythweb .24 or greater you will need to make a couple of 
-  changes to episode.php since .24/trunk has changed some of the mythweb 
-  classes/includes.  I've only had feedback from others and haven't tested this 
+- If you are running mythweb .24 or greater you will need to make a couple of
+  changes to episode.php since .24/trunk has changed some of the mythweb
+  classes/includes.  I've only had feedback from others and haven't tested this
   with .24/trunk.  The two areas that need to be changed are commented with the
   required changes in the episodes.php file.
 
@@ -54,12 +55,13 @@ cd /usr/share/mythtv/mythweb/modules (path may be slightly different on your sys
 gunzip /tmp/episode.tar.gz
 tar xvf /tmp/episode.tar
 
-Step 2: 
+
+Step 2:
 -------
 cd /usr/share/mythtv/mythweb/modules/_shared/tmpl/default
-Add a line like the following to header.php  
+Add a line like the following to header.php
 
-NOTE: If you have installed mythepisode in the past you need to update the line 
+NOTE: If you have installed mythepisode in the past you need to update the line
       below as it has changed.
 
 EXISTING LINE: <a href="tv/recorded"><?php echo t('Recorded Programs') ?></a>
@@ -67,6 +69,7 @@ EXISTING LINE: &nbsp; | &nbsp;
 NEW LINE: <a href="episode"><?php echo t('TV Episodes') ?></a>
 NEW LINE: &nbsp; | &nbsp;
 EXISTING LINE: <?php } ?>
+
 
 Step 3:
 -------
@@ -80,26 +83,29 @@ cd /usr/share/mythtv/mythweb/data (The path to the mythweb/data dir may be diffe
                                    for your installation.)
 ln -s /var/lib/mythtv/episode  episode
 
+
 Step 4:
 -------
-This step is optional, but required if you want to use the tvwish funtion in 
-mythepisode.  If you choose not to use this you can disable and hide all tvwish
-functions by updating the tvwishhide configuration option in the mythweb settings
+cd /usr/share/mythtv/mythweb/modules/_shared/lang
+./build_translation.pl
 
-download tvwish from http://www.templetons.com/brad/myt/tvwish.html and install it 
+
+Step 5:
+-------
+This step is optional, but required if you want to use the tvwish funtion in
+mythepisode.  If you choose not to use this you can disable and hide all tvwish
+functions by updating the tvwishhide configuration option in the mythweb settings.
+If you don't install tvwish now you can always do it later if you choose
+
+download tvwish from http://www.templetons.com/brad/myt/tvwish.html and install it
 under /usr/share/mythtv/tvwish
 
 Add a cronjob to roots crontab
 00 12 * * * /usr/share/mythtv/mythweb/modules/episode/utils/runwish > /dev/null 2>&1
 
-Step 5:
--------
-cd /usr/share/mythtv/mythweb/modules/_shared/lang
-./build_translation.pl
-
 *Note:*
-If your paths differ from mine above then you will have to make a few changes 
-to paths in the cronjob and the scripts below.  I plan to fix this in the 
+If your paths differ from mine above then you will have to make a few changes
+to paths in the cronjob and the scripts below.  I plan to fix this in the
 future.
 - runwish
 
@@ -122,7 +128,7 @@ country is selected.
 examples:
 US
 US CA
-US UK CA 
+US UK CA
 
 After making a change to this setting you will need to do an "Update Shows" from
 the main mythepisode page.
@@ -131,7 +137,7 @@ the main mythepisode page.
 Default page view:
 ------------------
 This option is used to determine which page is displayed by default when you select
-"TV Episodes".  The default setting is "recorded".  
+"TV Episodes".  The default setting is "recorded".
 
 options:
 recorded - Only display shows that have previously recorded
@@ -156,17 +162,17 @@ Episode matching accuracy (%):
 ------------------------------
 This option is used to help improve episode matching.  Because of spelling differences
 from different sources there are times when episodes fail to be marked as previously
-recorded or scheduled for recording.  To overcome this we compare the episode name 
-from TVRage.com/TheTVDB.com against the episode name from mythtv and label as a match 
-if the character match between the two is equal to or greater than the episode matching 
-percentage.  The default setting is 85% which means the two must match 85% or higher 
-to get labeled as a match. 
+recorded or scheduled for recording.  To overcome this we compare the episode name
+from TVRage.com/TheTVDB.com against the episode name from mythtv and label as a match
+if the character match between the two is equal to or greater than the episode matching
+percentage.  The default setting is 85% which means the two must match 85% or higher
+to get labeled as a match.
 
 example:  A King of Queens episode called "Alter Ego"
 
-mythtv listing:		TVRage.com listing:
+mythtv listing:         TVRage.com listing:
 ---------------         ---------------
-Altar Ego	 	Alter Ego
+Altar Ego               Alter Ego
 
 87.5% of the characters match so the default setting of 85% would mark these as a match.
 
@@ -178,8 +184,8 @@ balance.
 Update episode info if older than (days):
 -----------------------------------------
 This option is used to set how often episode information is automatically grabbed from
-TVRage.com/TheTVDB.com.  The default setting is 7 days.  When you click on a TV show, 
-mythepisode will verify that you have downloaded episode information and that it is not 
+TVRage.com/TheTVDB.com.  The default setting is 7 days.  When you click on a TV show,
+mythepisode will verify that you have downloaded episode information and that it is not
 older than 7 days.  If it is older than 7 days mythepisode will go to TVRage.com/TheTVDB.com
 and get updated information.
 
@@ -205,10 +211,10 @@ Survivor: Nicaragua             Survivor
 2010 MTV Video Music Awards     MTV Video Music Awards
 Hawaii Five-0                   Hawaii Five-0 (2010)
 The Amazing Race 17             The Amazing Race
-Big Brother			Big Brother (US)
-Hell's Kitchen			Hell's Kitchen (UK)
+Big Brother                     Big Brother (US)
+Hell's Kitchen                  Hell's Kitchen (UK)
 
-This problem can be overcome by adding them in the override tab.  By default if 
+This problem can be overcome by adding them in the override tab.  By default if
 mythepisode finds an issue with a show that can't be matched it will add it to the
 override tab.  It is up to you to fill in the missing show title as displayed in
 mythepisode and save the configuration.  You can easily find it in mythepisode by
