Edited wiki page Installation_Instructions through web user interface.

--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -158,6 +158,10 @@ Default data site:
 This option is used to choose the query site used for grabbing episode information.
 The default setting is TVRage.com
 
+options:
+TVRage.com
+TheTVDB.com
+
 
 Display tvwish options:
 -----------------------
