--- a/trunk/CHANGES
+++ b/trunk/CHANGES
@@ -1,3 +1,7 @@
+1.0.9
+    * Add ability to disable subtitle matching on shows
+    * Add Update date to episode display page
+
 1.0.8
     * Format code comments
     * Fix to previous recording deletion
