--- a/trunk/README
+++ b/trunk/README
@@ -49,9 +49,11 @@ As installed on my system
 
 Step 1:
 -------
-cd /usr/share/mythtv/mythweb/modules (path may be slightly different on your system,
-                                      but you have to install mythepisode under
-                                      mythweb/modules)
+Download mythepisode and place it in /tmp
+
+cd /usr/share/mythtv/mythweb/modules  -- path may be slightly different on your 
+                                      -- system, but you have to install 
+                                      -- mythepisode under ~mythweb/modules
 gunzip /tmp/episode.tar.gz
 tar xvf /tmp/episode.tar
 
@@ -59,16 +61,16 @@ tar xvf /tmp/episode.tar
 Step 2:
 -------
 cd /usr/share/mythtv/mythweb/modules/_shared/tmpl/default
-Add a line like the following to header.php
+Add the two lines below to header.php
 
 NOTE: If you have installed mythepisode in the past you need to update the line
       below as it has changed.
 
-EXISTING LINE: <a href="tv/recorded"><?php echo t('Recorded Programs') ?></a>
-EXISTING LINE: &nbsp; | &nbsp;
-NEW LINE: <a href="episode"><?php echo t('TV Episodes') ?></a>
-NEW LINE: &nbsp; | &nbsp;
-EXISTING LINE: <?php } ?>
+EXISTING LINE:  <a href="tv/recorded"><?php echo t('Recorded Programs') ?></a>
+EXISTING LINE:  &nbsp; | &nbsp;
+NEW LINE:       <a href="episode"><?php echo t('TV Episodes') ?></a>
+NEW LINE:       &nbsp; | &nbsp;
+EXISTING LINE:  <?php } ?>
 
 
 Step 3:
@@ -77,10 +79,10 @@ Create a directory where you want your show/episode information stored.  I use t
 same directory path where my tv and video recordings are stored.  This will ensure
 that if you update mythweb or mythepisode your data files will stay intact.
 
-mkdir /var/lib/mythtv/episode  (This can be wherever you want)
+mkdir /var/lib/mythtv/episode      -- This can be wherever you want
 chmod 777 /var/lib/mythtv/episode
-cd /usr/share/mythtv/mythweb/data (The path to the mythweb/data dir may be different
-                                   for your installation.)
+cd /usr/share/mythtv/mythweb/data  -- The path to the mythweb/data dir may be 
+                                   -- different for your mythweb installation.
 ln -s /var/lib/mythtv/episode  episode
 
 
@@ -95,7 +97,7 @@ Step 5:
 This step is optional, but required if you want to use the tvwish funtion in
 mythepisode.  If you choose not to use this you can disable and hide all tvwish
 functions by updating the tvwishhide configuration option in the mythweb settings.
-If you don't install tvwish now you can always do it later if you choose
+If you don't install tvwish now you can always do it later if you choose to
 
 download tvwish from http://www.templetons.com/brad/myt/tvwish.html and install it
 under /usr/share/mythtv/tvwish
@@ -112,7 +114,10 @@ future.
 -----------------------------------------------------------------------------------
 Configuration options:
 -----------------------------------------------------------------------------------
-All of these configuation options should be changed from mythweb settings utility
+You don't have to make any changes to these settings since they all have default
+values.  You should take a look at these and understand what each setting is used
+for so that you can make configuration changes to suite your needs.  All of these 
+configuation options should be changed from the mythweb settings utility.
 
 #############
 Settings Tab:
