Edited wiki page Installation_Instructions through web user interface.

--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -95,6 +95,8 @@ root@myth:/usr/share/mythtv/mythweb/data#
 
 Step 4:
 -------
+Run the mythweb build_translation script.
+
 -  cd /usr/share/mythtv/mythweb/modules/_shared/lang
 -  ./build_translation.pl
 
