Edited wiki page Patches through web user interface.

--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -4,8 +4,8 @@
 = Details =
 
 1.0.9(trunk)
-    * Add ability to disable subtitle matching on shows
-    * Add Update date to episode display page
+    * Add ability to disable subtitle matching on individual shows
+    * Add Last Update date to episode display page
 
 1.0.8
     * Format code comments
