--- a/trunk/CHANGES
+++ b/trunk/CHANGES
@@ -1,6 +1,7 @@
 1.0.9
     * Add ability to disable subtitle matching on individual shows
     * Add Last Update date to episode display page
+    * Code cleanup(WIP)
 
 1.0.8
     * Format code comments
