Edited wiki page Installation_Instructions through web user interface.

--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -47,6 +47,11 @@ IE      - very slow on my system
 -------------------------
 Installation Instructions
 -------------------------
+Note:  If you have never installed mythepisode you should perform all steps. 
+If you are upgrading from a previous version of mythepisode you will only
+need to perform step 1.  If you have upgraded mythtv/mythweb to a new version you
+will need to do steps 1,2 and 4. In all cases you should review the configuration 
+options listed after the installation instructions.
 
 As installed on my system(Ubuntu)
 
@@ -83,10 +88,14 @@ Create a directory where you want your show/episode information stored.  I use t
 same directory path where my tv and video recordings are stored.  This will ensure
 that if you update mythweb or mythepisode your data files will not be removed.
 
--  mkdir /var/lib/mythtv/episode      -- This can be wherever you want
+-  mkdir /var/lib/mythtv/episode      -- This can be wherever you want.  My mythtv
+                                         recordings, movies, etc are stored in 
+                                         directories located under /var/lib/mythtv so
+                                         this is where I want to create the episode dir.
 -  chmod 777 /var/lib/mythtv/episode
 -  cd /usr/share/mythtv/mythweb/data  -- The path to the mythweb/data dir may be
                                       -- different for your mythweb installation.
+
 -  ln -s /var/lib/mythtv/episode  episode
 
 This is what mine looks like after the above link is created and I run an ls -lrt
