--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,6 +1,7 @@
 1.0.9
     * Add ability to disable subtitle matching on individual shows
     * Add Last Update date to episode display page
+    * Move documents to docs directory
     * Code cleanup(WIP)
 
 1.0.8
