Edited wiki page Contributors through web user interface.

--- a/wiki/Contributors.wiki
+++ b/wiki/Contributors.wiki
@@ -1,7 +1,7 @@
 #summary mythepisode contributors
 #labels Featured
 
-Thanks to the those who have helped out by contributing code fixes or
+Thanks to those who have helped out by contributing code fixes or
 suggestions.
 
 
