--- a/docs/README
+++ b/docs/README
@@ -41,12 +41,6 @@ IE      - very slow on my system
   under the installation instructions is all of the configuration options and
   ther purpose.
 
-- If you are running mythweb .24 or greater you will need to make a couple of
-  changes to episode.php since .24/trunk has changed some of the mythweb
-  classes/includes.  I've only had feedback from others and haven't tested this
-  with .24/trunk.  The two areas that need to be changed are commented with the
-  required changes in the episodes.php file.
-
 ################################################################################
 ################################################################################
 
@@ -153,14 +147,26 @@ INSTALLATION IS NOW DONE.  CHECKOUT THE CONFIGURATION OPTIONS LISTED BELOW.
 ----------------------
 Configuration options:
 ----------------------
-You don't have to make any changes to these settings since they all have default
-values.  You should take a look at these and understand what each setting is used
+The only setting that you need to potentially change is the value for the mythtv
+version.  You should take a look at these and understand what each setting is used
 for so that you can make configuration changes to suit your needs.  All of these
 configuation options should be changed from the mythweb settings utility.
 
 #############
 Settings Tab:
 #############
+
+MythTV Version:
+---------------
+This option is used to set your currently running mythtv version.  The default
+value is .24+
+
+options:
+.21
+.22
+.23
+.24+  - Used for .24 and above
+
 
 Countries (space seperated):
 ----------------------------
@@ -190,7 +196,7 @@ all      - Display every(I'm sure some are missing) TV series that has ever aire
 
 
 Default data site:
--------------------
+------------------
 This option is used to choose the query site used for grabbing episode information.
 The default setting is TVRage.com
 
