Add the ability to mark an episode as recorded

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -2,6 +2,7 @@
     * Fix to scheduled episode matching with (country) after the title
     * Fix to grabid.pl for info grabbing from thetvdb.com
     * Add myth version configuration option
+    * Add ability to mark an episode as recorded
 
 1.0.9
     * Add ability to disable subtitle matching on individual shows
