Edited wiki page Contributors through web user interface.

--- a/wiki/Contributors.wiki
+++ b/wiki/Contributors.wiki
@@ -35,3 +35,6 @@ Doug H.:
 
 Marc T.:
   * php fix for previous recordings
+
+Anthony G.:
+    * Script to add programid to episodes without a programid in DB
